--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.33.3",
+    "@clerk/themes": "^2.4.27",
+    "@neondatabase/serverless": "^1.0.2",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@t3-oss/env-nextjs": "^0.12.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
